# poreScale

./: CMakeLists.txt  README.md
documentation/: Doxyfile
example/bla/axpy/: CMakeLists.txt  axpy.cpp
example/bla/axpy/cmake/: FindPORESCALE.cmake
example/bla/norm/: CMakeLists.txt  norm.cpp
example/bla/sparseMatvec/: CMakeLists.txt  sparseMatvec.cpp
example/parameters/: CMakeLists.txt  parameters.cpp
example/permeability_inflow/: permeability.cpp
example/util/: printDeviceProp.hpp
include/: bla.hpp  define.hpp  matrix.hpp  mesh.hpp  meshTypes.hpp  models.hpp  parameters.hpp  porescale.hpp  solve.hpp  stokes.hpp  types.hpp
src/bla/: bla.cpp
src/matrix/: matrix.cpp  sparseMatrix.cpp
src/mesh/: mesh.cpp  meshTypes.cpp  voxel.cpp
src/parameters/: parameters.cpp
src/solve/: solve.cpp
utils/: setenv_ps.sh
