CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7 FATAL_ERROR)

PROJECT(libporescale)

SET(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake)

### FIND PACKAGES ###
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES("./include")

### FLAGS AND PS SOURCES SECTION ###
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Mcudalib -O2 --c++17 -stdpar")

file ( GLOB_RECURSE HEADERS "./include/*" )

file( GLOB_RECURSE SOURCES "./src/*" )

SET(LIBRARY_SRCS ${HEADERS} ${SOURCES})

ADD_LIBRARY(porescale STATIC ${LIBRARY_SRCS})

TARGET_LINK_LIBRARIES(porescale ${PS_LINK_LIBS})

INSTALL(TARGETS porescale DESTINATION lib)
INSTALL(FILES ${HEADERS} DESTINATION include)

