CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7 FATAL_ERROR)

PROJECT(parameters)

SET(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake)

### FIND PACKAGES ###

FIND_PACKAGE(MPI REQUIRED)
INCLUDE_DIRECTORIES(${MPI_CXX_INCLUDE_PATH})

FIND_PACKAGE(PORESCALE REQUIRED)
INCLUDE_DIRECTORIES(${PORESCALE_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

### FLAGS AND EXAMPLE SOURCES ###
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MPI_CXX_COMPILE_FLAGS} ${MPI_CXX_LINK_FLAGS} ${OpenMP_CXX_FLAGS} -O2 --c++17 -stdpar -Mcudalib")

SET(EXECUTABLE_SRCS ./parameters.cpp)

ADD_EXECUTABLE(parameters ${EXECUTABLE_SRCS})

TARGET_LINK_LIBRARIES( parameters ${MPI_CXX_LIBRARY}
                       ${PORESCALE_LIBRARY} )

