CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7 FATAL_ERROR)

PROJECT(axpy)

SET(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake)

### FIND PACKAGES ###
FIND_PACKAGE(PORESCALE REQUIRED)
INCLUDE_DIRECTORIES(${PORESCALE_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

### FLAGS AND EXAMPLE SOURCES ###
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 --c++17 -stdpar -lrt -Mcudalib -lcuda -lcudart")

SET(EXECUTABLE_SRCS ./axpy.cpp)

ADD_EXECUTABLE(axpy ${EXECUTABLE_SRCS})

TARGET_LINK_LIBRARIES( axpy
                       ${PORESCALE_LIBRARY} )

