CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7 FATAL_ERROR)

PROJECT(axpy)

SET(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake)

### FIND PACKAGES ###
FIND_PACKAGE(PORESCALE REQUIRED)
INCLUDE_DIRECTORIES(${PORESCALE_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

### FLAGS AND EXAMPLE SOURCES ###

# Default to GPU build. Add -DMULTICORE=ON to the command line. 
option(MULTICORE "multicore stdpar" OFF)

if(MULTICORE)
    set(CMAKE_CXX_FLAGS "-stdpar=multicore -O3 -Wall -std=c++17")
    set(CMAKE_EXE_LINKER_FLAGS "-ltbb")
else()
    set(CMAKE_CXX_FLAGS "-stdpar -O3 -Wall -std=c++17")
endif()

SET(EXECUTABLE_SRCS ./axpy.cpp)

ADD_EXECUTABLE(axpy ${EXECUTABLE_SRCS})

TARGET_LINK_LIBRARIES( axpy
                       ${PORESCALE_LIBRARY} )

